--- a/index.html
+++ b/index.html
@@ -1,10 +1,240 @@
-<html>
-<head>
-
-</head>
-<body>
-    <p class="hoge">八幡です</p>
-    <p>変更２</p>
-    <p>こんにちは、道前です。手越もB型です。</p>
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+      	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+      	<meta name="viewport" content="width=device-width, initial-scale=1">
+      	<title>TRINITY 0(トリニティ ゼロ)｜最先端リラクゼーションマシン×熟練セラピストのコラボレーション</title>
+      	<meta name="description" content="TRINITY 0(トリニティ ゼロ)は、完全個室で最先端リラクゼーションマシンに横たわりながら、セラピストが独自の手技でヘッドマッサージを行う施術です。">
+      	<meta name="keywords" content="TRINITY 0,TRINITY ZERO,トリニティ ゼロ,トリニティ 0,TRINITY,横浜,エステ,エステサロン,リラクゼーション,リラクゼーションマシン,セラピスト,ヘッドマッサージ,アンチエイジング">
+      	<meta property="og:title" content="TRINITY 0(トリニティ ゼロ)｜最先端リラクゼーションマシン×熟練セラピストのコラボレーション">
+      	<meta property="og:description" content="TRINITY 0(トリニティ ゼロ)は、完全個室で最先端リラクゼーションマシンに横たわりながら、セラピストが独自の手技でヘッドマッサージを行う施術です。" />
+      	<meta property="og:url" content="http://trinity-zero.com/">
+      	<meta property="og:image" content="http://trinity-zero.com/assets/img/logo_trinity0.png">
+        <meta name="twitter:title" content="TRINITY 0(トリニティ ゼロ)｜最先端リラクゼーションマシン×熟練セラピストのコラボレーション">
+        <meta name="twitter:description" content="TRINITY 0(トリニティ ゼロ)は、完全個室で最先端リラクゼーションマシンに横たわりながら、セラピストが独自の手技でヘッドマッサージを行う施術です。">
+      	<meta name="twitter:image" content="http://trinity-zero.com/assets/img/logo_trinity0.png" />
+      	<meta name="twitter:card" content="summary_large_image" />
+        <link href="/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" sizes="180x180">
+        <link rel="icon" href="/assets/img/shortcut-icon-android.png" sizes="192x192">
+      	<base href="/">
+      	<link href="" rel="shortcut icon">
+      	<link rel="stylesheet" href="/assets/css/reset.css">
+      	<link rel="stylesheet" href="/assets/css/style.css">
+    </head>
+    <body>
+    <div class="site-wrapper">
+      <header class="site-header jsc-site-header">
+        <div class="inner-site-wrapper">
+          <a class="hamburger-menu jsc-memu-trigger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+          <div class="site-logo"><h1><img src="/assets/img/logo_trinity0.svg" alt="trinity0"></h1></div>
+          <ul class="glonav jsc-glonav">
+            <li><a href="/#about">TRINITY 0 とは</a></li>
+            <li><a href="/#menu">メニュー</a></li>
+            <li><a href="/#faq">よくある質問</a></li>
+            <li><a href="/#access">アクセス</a></li>
+            <li><a href="/#contact">お問い合わせ</a></li>
+          </ul>
+          <a class="btn default">ネット予約</a>
+          <a href="https://rM34aV.b-merit.jp/fR8kDS/web/login" target="_blank" class="header-link">ご予約はこちら</a>
+        </div>
+      </header>
+      <div class="menu-contents jsc-menu-contents">
+        <ul class="glonav-list jsc-menu-list">
+          <li><a href="/#about">TRINITY0 とは</a></li>
+          <li><a href="/#menu">メニュー</a></li>
+          <li><a href="/#faq">よくある質問</a></li>
+          <li><a href="/#access">アクセス</a></li>
+          <li><a href="/#contact">お問い合わせ</a></li>
+        </ul>
+      </div>
+      <main class="site-main">
+        <div class="kv-block jsc-section-block"><h2 class="kv-hed">地上で体験できる無重力睡眠</h2></div>
+        <div class="concept-block jsc-section-block">
+          <h2 class="concept-hed jsc-fadein-wrap"><span class="jsc-fadein-target">完全個室の無水ヘッドスパサロンの<br class="pcdn">極上癒し睡眠</span></h2>
+        </div>
+        <section class="section-block desc jsc-section-block jsc-fadein-wrap" id="about">
+          <h3 class="section-hed white"><span>TRINITY 0（ゼロ）とは</span></h3>
+          <div class="section-content jsc-fadein-target">
+            <p class="text-white">完全個室で水を使わず、セラピストが素手で髪の毛をかき分けながら頭皮を揉みほぐしていく施術です。</p>
+            <p class="text-white">リズミカルで心地よい刺激は自律神経を整へホルモンバランスを改善、心の緊張をときほぐす「癒しの効果」や「深い眠り」をもたらします。<br>さらに頭の筋肉をもみほぐす事で、血液・神経・リンパ液の流れを促進し、毛根への栄養補給もスムーズに導きます。</p>
+            <p class="text-white">メイクルームもありますので、施術後のお出かけも安心です。</p>
+            <p class="comments-text text-white">※メイク道具はご持参下さい。</p>
+          </div>
+        </section>
+        <section class="section-block trouble jsc-section-blocK" id="trouble">
+          <h3 class="section-hed"><span>ヘッドマッサージの<br class="pcdn">効果が期待できる症状</span></h3>
+          <div class="section-content">
+            <div class="trouble-container flex-wrap jsc-fadein-wrap">
+              <div class="trouble-image"><img src="/assets/img/img_trouble_01.png" alt=""></div>
+              <div class="trouble-detail">
+                <ul class="trouble-list">
+                  <li class="jsc-fadein-target">頭が重い</li>
+                  <li class="jsc-fadein-target">眠りが浅い</li>
+                  <li class="jsc-fadein-target">眼が疲れやすい</li>
+                </ul>
+              </div>
+            </div>
+            <div class="trouble-container flex-wrap reverse jsc-fadein-wrap">
+              <div class="trouble-image"><img src="/assets/img/img_trouble_02.png" alt=""></div>
+              <div class="trouble-detail">
+                <ul class="trouble-list">
+                  <li class="jsc-fadein-target">首や肩がこる</li>
+                  <li class="jsc-fadein-target">集中力、気力が出ない</li>
+                  <li class="jsc-fadein-target">ストレスが多い</li>
+                </ul>
+              </div>
+            </div>
+            <p class="trouble-text">「最近ストレスが溜まっている」と感じる方、<br class="pcdn">是非一度ヘッドマッサージをお試し下さい。</p>
+          </div>
+        </section>
+        <section class="section-block menu jsc-section-block jsc-fadein-wrap" id="menu">
+          <h3 class="section-hed"><span>メニュー</span></h3>
+          <div class="section-content">
+            <div class="menu-container">
+              <img class="icon-frame tl spdn" src="/assets/img/icon_frame_tl.png" alt="">
+              <img class="icon-frame tr spdn" src="/assets/img/icon_frame_tr.png" alt="">
+              <img class="icon-frame bl spdn" src="/assets/img/icon_frame_bl.png" alt="">
+              <img class="icon-frame br spdn" src="/assets/img/icon_frame_br.png" alt="">
+              <img class="icon-frame tl pcdn" src="/assets/img/icon_frame_tl_sp.png" alt="">
+              <img class="icon-frame tr pcdn" src="/assets/img/icon_frame_tr_sp.png" alt="">
+              <img class="icon-frame bl pcdn" src="/assets/img/icon_frame_bl_sp.png" alt="">
+              <img class="icon-frame br pcdn" src="/assets/img/icon_frame_br_sp.png" alt="">
+              <div class="menu-col flex-wrap">
+                <div class="menu-image jsc-fadein-target"><img src="/assets/img/img_menu.png" alt=""></div>
+                <div class="menu-detail">
+                  <p class="course-hed open">オープン記念価格</p>
+                  <ul class="menu-list jsc-fadein-target">
+                    <li>
+                      <span>30分コース</span><br class="pcdn"><span class="price"><span class="price">4,000円</span> → <span class="sale">3,500円</span> （税込）</span>
+                      <p>セラピストによる頭・首・肩・眼筋マッサージ＋マシンによる足・腕・腰まわりマッサージ</p>
+                    </li>
+                    <li>
+                      <span>60分コース</span><br class="pcdn"><span class="price"><span>8,000円</span> → <span class="sale">7,000円</span> （税込）</span>
+                      <p>セラピストによる頭・首・肩・眼筋マッサージ＋マシンによる足・腕・腰まわりマッサージ</p>
+                    </li>
+                  </ul>
+                  <p class="course-hed couple">カップルコース</p>
+                  <ul class="menu-list jsc-fadein-target">
+                    <li>
+                      <span>60分コース</span><br class="pcdn"><span class="price"><span>10,000円</span> → <span class="sale">8,000円</span> （税込）</span>
+                      <p>２名様用個室でヘッドマッサージ30分＋最先端マッサージチェア30分</p>
+                      <p class="comments-text">※お友達同士でも可</p>
+                      <p class="comments-text">※2名様合計料金</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="menu-btn jsc-fadein-target"><a href="https://rM34aV.b-merit.jp/fR8kDS/web/login" target="_blank" class="btn default">ご予約はこちら</a></div>
+            </div>
+          </div>
+        </section>
+        <section class="section-block faq grey jsc-section-block" id="faq">
+          <h3 class="section-hed"><span>よくあるご質問</span></h3>
+          <div class="section-content">
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>お化粧したままでも大丈夫ですか？</dt>
+              <dd class="jsc-fadein-target">はい、大丈夫です。<br>目元にタオルをかけた状態で、顔周りも施術します。少し化粧が落ちる可能性がありますが、<br>施術後はパウダールームへご案内いたしますので、気になる方はお化粧道具をお持ち下さい。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>まつげエクステをしていても大丈夫ですか？</dt>
+              <dd class="jsc-fadein-target">特に問題はございませんが、目元にタオルをかけた状態で施術します。<br>気になる場合はタオル無しで施術しますので、当日担当の者にご相談ください。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>薄毛、抜け毛予防や効果はありますか？</dt>
+              <dd class="jsc-fadein-target">あくまでもリラクゼーション効果を追求した施術です。そのような効果はありません。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>整髪剤などは付けていない方がいいですか？</dt>
+              <dd class="jsc-fadein-target">頭部はセラピストが素手でかき分けながら施術を行います。<br>ハードタイプの整髪料ですと施術困難な場合がございますので施術後にお付けになることをオススメしております。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>生理中でも大丈夫ですか？</dt>
+              <dd class="jsc-fadein-target">体調不良でなければ、特に問題ございません。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>男性スタッフはいますか？</dt>
+              <dd class="jsc-fadein-target">スタッフは全員女性セラピストです。</dd>
+            </dl>
+            <dl class="faq-list jsc-fadein-wrap">
+              <dt>小さな子どもは同伴可能ですか？</dt>
+              <dd class="jsc-fadein-target">大変申し訳ございません、施術を受ける方以外のご来店はお断りしております。<br>※16歳以上施術可</dd>
+            </dl>
+          </div>
+        </section>
+        <section class="section-block access jsc-section-block jsc-fadein-wrap" id="access">
+          <h3 class="section-hed"><span>アクセス</span></h3>
+          <div class="section-content">
+            <div class="access-info flex-wrap">
+              <div class="access-image jsc-fadein-target"></div>
+              <ul class="access-list jsc-fadein-target">
+                <li>
+                  <dl class="access-detail flex-wrap">
+                    <dt>所在地</dt>
+                    <dd>神奈川県横浜市神奈川区鶴屋町３-29-1 木口ビル3F</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl class="access-detail flex-wrap">
+                    <dt>TEL</dt>
+                    <dd><a href="tel:0455949330">045-594-9330</a></dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl class="access-detail flex-wrap">
+                    <dt>営業時間</dt>
+                    <dd>11時～20時</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl class="access-detail flex-wrap">
+                    <dt>定休日</dt>
+                    <dd>月曜日</dd>
+                  </dl>
+                </li>
+              </ul>
+            </div>
+            <div class="google-map jsc-fadein-target">
+              <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3249.41463501231!2d139.61738081525297!3d35.46928368024435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185c0fd82f156d%3A0x473598bca51d9c6b!2z44CSMjIxLTA4MzUg56We5aWI5bed55yM5qiq5rWc5biC56We5aWI5bed5Yy66ba05bGL55S677yT5LiB55uu77yS77yZ4oiS77yRIOacqOWPo-ODk-ODqw!5e0!3m2!1sja!2sjp!4v1537435085311" allowfullscreen></iframe>
+            </div>
+            <a href="https://www.google.co.jp/maps/place/Japan,+%E3%80%92221-0835+Kanagawa-ken,+Yokohama-shi,+Kanagawa-ku,+Tsuruyach%C5%8D,+3+Chome%E2%88%9229-1+%E6%9C%A8%E5%8F%A3%E3%83%93%E3%83%AB3F/@35.4692837,139.6173808,17z/data=!3m1!4b1!4m5!3m4!1s0x60185c0fd82f156d:0x57f082c786e4af39!8m2!3d35.4692837!4d139.6195695" target="_blank" class="text-link">大きい地図で見る</a>
+            <div class="access-text jsc-fadein-target">
+              <p>横浜駅 西口より徒歩5分</p>
+              <p>「横浜駅 西口」を出て、ヨドバシカメラとレストラン‘TGI FRIDAYS’の間を直進。<br>国道1号線に突き当たったら信号を渡り、左に進みます。<br>セブンイレブンからさらに50メートルほど先、1階にイタリアンレストラン‘Little Cat’が入っている木口ビルの3階に当店はございます。</p>
+            </div>
+          </div>
+        </section>
+        <section class="section-block contact grey jsc-section-block" id="contact">
+          <h3 class="section-hed"><span>お問い合わせ</span></h3>
+          <div class="section-content">
+            <table class="contact-table">
+              <tbody>
+                <tr>
+                  <th>TEL</th>
+                  <td><a href="tel:0455949330">045-594-9330</a></td>
+                </tr>
+                <tr>
+                  <th>メールアドレス</th>
+                  <td>yokohama.yoyaku@trinity-ginza.com</td>
+                </tr>
+              </tbody>
+            </table>
+            <a href="https://rM34aV.b-merit.jp/fR8kDS/web/login" target="_blank" class="btn default l">ご予約はこちら</a>
+          </div>
+        </section>
+      </main>
+      <footer class="site-footer">
+        <small><span>copyright &copy; 2018 </span><img src="/assets/img/txt_footer.svg" class="txt-footer" alt=""><span>All Rights Reserved.</span></small>
+      </footer>
+      <div class="overlay jsc-overlay"></div>
+    </div>
+    <script type="text/javascript" src="/assets/js/libs/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/libs/smooziee.js"></script>
+    <script type="text/javascript" src="/assets/js/function.js"></script>
+    </body>
 </html>
