--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <ul class="glonav jsc-glonav">
             <li><a href="/#about">TRINITY 0 とは</a></li>
             <li><a href="/#menu">メニュー</a></li>
-            <li><a href="/#faq">よくある質問</a></li>
+            <li><a href="/#faq">質問</a></li>
             <li><a href="/#access">アクセス</a></li>
             <li><a href="/#contact">お問い合わせ</a></li>
           </ul>
