--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="/#menu">メニュー</a></li>
             <li><a href="/#faq">質問</a></li>
             <li><a href="/#access">アクセス</a></li>
-            <li><a href="/#contact">お問い合わせ</a></li>
+            <li><a href="/#contact">合わせ</a></li>
           </ul>
           <a class="btn default">ネット予約</a>
           <a href="https://rM34aV.b-merit.jp/fR8kDS/web/login" target="_blank" class="header-link">ご予約はこちら</a>
