--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href="https://rM34aV.b-merit.jp/fR8kDS/web/login" target="_blank" class="btn default l">ご予約はこちら</a>
+            <a href="#" target="_blank" class="btn default l">ご予約はこちら</a>
           </div>
         </section>
       </main>
