--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </a>
           <div class="site-logo"><h1><img src="/assets/img/logo_trinity0.svg" alt="trinity0"></h1></div>
           <ul class="glonav jsc-glonav">
-            <li><a href="/#about">TRINITY 0 とは</a></li>
+            <li><a href="/#about">TRINITY 0 とは しらねーよ</a></li>
             <li><a href="/#menu">メニュー</a></li>
             <li><a href="/#faq">質問</a></li>
             <li><a href="/#access">アクセス</a></li>
