--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="site-logo"><h1><img src="/assets/img/logo_trinity0.svg" alt="trinity0"></h1></div>
           <ul class="glonav jsc-glonav">
             <li><a href="/#about">TRINITY 0 とは しらねーよ</a></li>
-            <li><a href="/#menu">メニュー</a></li>
+            <li><a href="/#menu">メニュ</a></li>
             <li><a href="/#faq">質問</a></li>
             <li><a href="/#access">アクセス</a></li>
             <li><a href="/#contact">合わせ</a></li>
